Prevent the page content from jumping when you navigate between screens where one screen has a scrollbar and the other doesn't.

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   margin: 0;
+  margin-left: calc(100vw - 100%);
   font-family: $typographic-font-family;
   color: $typographic-base-font-color;
   line-height: $typographic-base-line-height;
